# unisys-nomenclature

./: .gitignore  README.md  package.json  pyproject.toml  vite.config.js
main/: settings.py  urls.py
my_auth/: apps.py  backends.py  middlewares.py  models.py
nomenclature/: admin.py  apps.py  pagination.py  services.py  tests.py  urls.py
nomenclature/fixtures/: units.json
nomenclature/management/commands/: import.py  seed.py
nomenclature/migrations/: 0001_initial.py
nomenclature/models/: __init__.py  approvements.py  approvers.py  comments.py  ens.py  groups.py  histories.py  okpd.py  okved.py  persons.py  products.py  requests.py  units.py
nomenclature/serializers/: __init__.py  approver.py  generic_request.py  group.py  person.py  product.py  request.py
nomenclature/views/: __init__.py  dictionaries.py  products.py  requests.py
static/public/css/: fonts.css
static/src/: App.vue  bootstrap.js  main.js  routes.js  style.css
static/src/api/: auth.js  core.js  hosts.js  store.js
static/src/assets/css/: app.sass  quasar-variables.sass
static/src/components/: CardSummary.vue  Drawer.vue  Footer.vue  GroupSelect.vue  Header.vue  NomenclatureItem.vue  PersonItem.vue  ProductDetails.vue  RequestForm.vue  RequestItem.vue  SearchField.vue
static/src/dialogs/: EnsSelectDialog.vue  Template.vue
static/src/pages/: EnsListPage.vue  Index.vue  NewRequestPage.vue  NomenclaturePage.vue  ProductDetailsPage.vue  RequestsPage.vue
templates/: index.html
